--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 avro==1.8.1
-cwltool==1.0.20160811184335
+cwltool==1.0.20160714182449
 html5lib==0.999999999
 isodate==0.5.4
 keepalive==0.5
 mistune==0.7.3
-git+https://github.com/Duke-GCB/Predict-TF-Binding-Service.git@0.1.1#egg=predict_service
+git+https://github.com/Duke-GCB/Predict-TF-Binding-Service.git@toil#egg=predict_service
 pyparsing==2.1.8
 PyYAML==3.11
 rdflib==4.2.1
@@ -12,7 +12,7 @@ rdflib-jsonld==0.4.0
 requests==2.11.0
 ruamel.ordereddict==0.4.9
 ruamel.yaml==0.11.11
-schema-salad==1.16.20160810195039
+schema-salad==1.14.20160708181155
 shellescape==3.4.1
 six==1.10.0
 SPARQLWrapper==1.7.6
